# StellaRay

./: .env.example  .gitignore  COMMUNITY_ENGAGEMENT.md  COMPLETE_DOCUMENTATION.md  CONTRIBUTING.md  CREATE_NEW_OAUTH.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  FIX_DEPLOYMENT_NOW.md  GOOGLE_OAUTH_FIX.md  GRANT_SUBMISSION.md  LAUNCH_VIDEO_SCRIPT.md  LICENSE  LOOM_WALKTHROUGH_SCRIPT.md  MPC_FEATURE.md  MPC_IMPLEMENTATION_SUMMARY.md  PITCH_SCRIPT.md  PLATFORM_ANALYSIS_AND_IMPROVEMENT_ROADMAP.md  PROTOCOL_25_INTEGRATION.md  QUICKSTART.md  README.md  REMOTION_VIDEO_1_DEATH_OF_SEED_PHRASES.md  SCF_41_SUBMISSION_ANSWERS.md  TECHNICAL_ARCHITECTURE.md  VERCEL_ENV_COPY_PASTE.txt  VIRAL_VIDEO_CONTENT_STRATEGY.md  WALKTHROUGH_VIDEO_SCRIPT.md  WHITEPAPER.md  ZK_MULTI_CUSTODY_COMPLETE.md  ZK_MULTI_CUSTODY_PITCH.md  package.json  setup.ps1
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
circuits/: package.json  zklogin.circom
circuits/lib/: base64.circom  bigint.circom  field_utils.circom  jwt_parser.circom  rsa_verifier.circom  sha256_partial.circom
contracts/gateway-factory/: Cargo.toml
contracts/gateway-factory/src/: lib.rs
contracts/jwk-registry/: Cargo.toml
contracts/jwk-registry/src/: lib.rs
contracts/smart-wallet/: Cargo.toml
contracts/smart-wallet/src/: lib.rs
contracts/x402-facilitator/: Cargo.toml
contracts/x402-facilitator/src/: lib.rs
contracts/zk-multi-custody/: Cargo.toml
contracts/zk-multi-custody/src/: lib.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
demo/: .env.example  .env.production  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
demo/data/: waitlist.json
demo/docs/: FEATURE_ROADMAP.md  HONEST_ASSESSMENT.md  PITCH_AND_ROADMAP.md  TECH_STACK.md  ZK_PRODUCTION_GUIDE.md
demo/public/: manifest.json  pitch-deck-final.html  pitch-deck-new.html  pitch-deck.html  pitch.html  robots.txt
demo/public/oauth/: callback.html
demo/scripts/: generate-pitch-pdf.js  init-db.js  seed-all.ts  seed-waitlist.ts
demo/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx  sitemap.ts  (+1 more)
docs/: BENCHMARKS.md  DEMO_SCRIPT.md  DOCUMENTATION.md  PRESENTATION_GUIDE.md  PROTOCOL_25_INTEGRATION.md  QUICKSTART.md  ROADMAP.md  SCF_APPLICATION.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_PREP.md  STELLAR_GRANT_PROPOSAL.md  VERCEL_DEPLOYMENT.md  VERCEL_ENV_VARS.md
prover/: Cargo.toml
prover/src/: main.rs  prove.rs  types.rs  witness.rs
salt-service/: Cargo.toml
salt-service/src/: jwt.rs  main.rs
scripts/: deploy-contracts.sh  trusted-setup.sh
sdk/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
sdk/src/: StellarZkLogin.ts  client.ts  index.ts  types.ts
(+151 files in other folders)
