[workspace]
resolver = "2"
members = [
    "contracts/zk-verifier",
    "contracts/smart-wallet",
    "contracts/jwk-registry",
    "contracts/gateway-factory",
    "contracts/x402-facilitator",
    "prover",
    "salt-service",
]

[workspace.package]
version = "0.1.0"
authors = ["Stellar Gateway Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stellar-gateway/stellar-gateway"

[workspace.dependencies]
# Protocol 25 (X-Ray) - Latest Soroban SDK with BN254 and Poseidon support
soroban-sdk = "25.0.0-rc.2"
soroban-token-sdk = "25.0.0-rc.2"
# Official Stellar Poseidon SDK for ZK-friendly hashing
soroban-poseidon = "25.0.0-rc.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
