[package]
name = "zklogin-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

# Crypto libraries for proof generation
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
num-bigint = "0.4"

# Poseidon hashing for ZK-friendly witness computation
light-poseidon = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
